--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,13 @@
 <nav>
-  <span routerLink='/dashboard' routerLinkActive='active'>Inicio</span>
-  <span routerLink='/cce' routerLinkActive='active'>CCE</span>
-  <span routerLink='/albergues' routerLinkActive='active'>Albergues</span>
-  <span routerLink='/directorio' routerLinkActive='active'>Directorio</span>
-  <span routerLink='/acerca' routerLinkActive='active'>Acerca de</span>
-</nav>
+  <div>
+    <img src="" alt="Logo de la municipalidad de Golfito">
+  </div>
+  <input type="text" placeholder="Buscar" name="search">
+  <section>
+    <span routerLink='/dashboard' routerLinkActive='active'>Inicio</span>
+    <span routerLink='/cce' routerLinkActive='active'>CCE</span>
+    <span routerLink='/albergues' routerLinkActive='active'>Albergues</span>
+    <span routerLink='/directorio' routerLinkActive='active'>Directorio</span>
+    <span routerLink='/acerca' routerLinkActive='active'>Acerca de</span>
+  </section>
+  </nav>
