--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div>
-    <img src="" alt="Logo de la municipalidad de Golfito">
+    <img src="../../assets/escudo1.gif" alt="Logo de la municipalidad de Golfito">
   </div>
   <input type="text" placeholder="Buscar" name="search">
   <section>
