Agregué una etiquita main al componente principal de esta manera se manejará mejor cuando los elementos sobrepasen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div>
   <app-navbar />
-  <router-outlet />
-  <app-footer />
+  <main>
+    <router-outlet />
+    <app-footer />
+  </main>
 </div>
