Agregado el navbar del footer

--- a/src/app/footer/footer-navbar/footer-navbar.component.html
+++ b/src/app/footer/footer-navbar/footer-navbar.component.html
@@ -1,1 +1,7 @@
-<p>footer-navbar works!</p>
+<nav>
+  <span routerLink='/dashboard' routerLinkActive='active'>Inicio</span>
+  <span routerLink='/cce' routerLinkActive='active'>CCE</span>
+  <span routerLink='/albergues' routerLinkActive='active'>Albergues</span>
+  <span routerLink='/directorio' routerLinkActive='active'>Directorio</span>
+  <span routerLink='/acerca' routerLinkActive='active'>Acerca de</span>
+</nav>
