Agregado la parte central del footer

--- a/src/app/footer/footer-logo/footer-logo.component.html
+++ b/src/app/footer/footer-logo/footer-logo.component.html
@@ -1,1 +1,17 @@
-<p>footer-logo works!</p>
+<footer>
+  <div>
+    <img src="" alt="logo ucr">
+    <img src="" alt="logo municipalidad">
+    <img src="" alt="logo CNE">
+  </div>
+
+  <span>
+    <a href="#">CorreoEjemplo&#64;gmail.com</a>
+    <br>
+    Tel: 1111-2222
+  </span>
+  <small>
+    El contenido de esta página tiene una licencia <br>
+    Todos los derechos reservados © 2024
+  </small>
+</footer>
