Agregada la parte izquierda del footer

--- a/src/app/footer/footer-social/footer-social.component.html
+++ b/src/app/footer/footer-social/footer-social.component.html
@@ -1,1 +1,6 @@
-<p>footer-social works!</p>
+<div>
+  <a href="#"><i></i></a>
+  <a href="#"><i></i></a>
+  <a href="#"><i></i></a>
+  <a href="#"><i></i></a>
+</div>
