Se agregaron los iconos

--- a/src/app/footer/footer-logo/footer-logo.component.html
+++ b/src/app/footer/footer-logo/footer-logo.component.html
@@ -1,8 +1,8 @@
 <footer>
   <div>
-    <img src="" alt="logo ucr">
-    <img src="" alt="logo municipalidad">
-    <img src="" alt="logo CNE">
+    <img src="../../../assets/img/ucr.gif" alt="logo ucr">
+    <img src="../../../assets/img/municipalidad.gif" alt="logo municipalidad">
+    <img src="../../../assets/img/cne.gif" alt="logo CNE">
   </div>
 
   <span>
