Add design component home-info.
Links to be added to the buttons

--- a/src/app/home/home-info/home-info.component.html
+++ b/src/app/home/home-info/home-info.component.html
@@ -1,1 +1,24 @@
-<p>home-info works!</p>
+<article class="main__content">
+    <div class="__title">
+        <h2>Sistema Nacionales de Gestion del Riesgo</h2>
+    </div>
+    <div class="__body">
+        <div class="__text">
+            <p>El SNGR permite organizar y articular de forma integral, armónica y coordinada las relaciones, los programas y recursos de las instituciones del estado</p>
+        </div>
+        <div class="__content">
+            <article class="__content-info">
+                <img src="../../../assets/img/home/hands.webp" alt="">
+                <button>Instancias</button>
+            </article>
+            <article class="__content-info">
+                <img src="../../../assets/img/home/politics.webp" alt="">
+                <button>Politicas</button>
+            </article>
+            <article class="__content-info">
+                <img src="../../../assets/img/home/costarica.webp" alt="">
+                <button>Plan Nacional</button>
+            </article>
+        </div>
+    </div>
+</article>
