--- a/src/app/home/home-info/home-info.component.html
+++ b/src/app/home/home-info/home-info.component.html
@@ -4,7 +4,10 @@
     </div>
     <div class="__body">
         <div class="__text">
-            <p>El SNGR permite organizar y articular de forma integral, armónica y coordinada las relaciones, los programas y recursos de las instituciones del estado</p>
+            <p>
+                El SNGR permite organizar y articular de forma integral, armónica y coordinada las relaciones, los programas y recursos de las instituciones del estado,
+                el Sector Privado y la Sociedad Civil organizada. 
+            </p>
         </div>
         <div class="__content">
             <article class="__content-info">
