Add component abot me.

--- a/src/app/home/home-aboutme/home-aboutme.component.html
+++ b/src/app/home/home-aboutme/home-aboutme.component.html
@@ -1,1 +1,21 @@
-<p>home-aboutme works!</p>
+<article class="main__content__about">
+    <div class="__title__about">
+        <h2>Datos Geograficos</h2>
+    </div>
+    <div class="__body__about">
+        <div class="__img">
+           <img src="../../../assets/img/home/RotuloGolfito.webp" alt="Rotulo Golfito, parque central">
+        </div>
+        <div class="__text">
+            <p>
+                En la época precolombina, el territorio que actualmente corresponde al cantón de Golfito, estuvo habitado por 
+                indígenas del llamado grupo de los bruncas. En los inicios de la conquista, el territorio fue dominio de Giriara, 
+                cacique de Turucaca, cacicazgo que se localizaba a unos 55 kilómetros del litoral de golfo Dulce, hacia el interior 
+                de la región; así como del cacique Osa, que, según el relato de Andrés de Cereceda del viaje efectuado por Gil 
+                González Dávila, se hallaba a ocho leguas (unos 45 kilómetros) de punta Burica....
+            </p>
+            <button>Leer más</button>
+        </div>
+
+    </div>
+</article>
