Added fontawesome library and improved footer

--- a/src/app/footer/footer-social/footer-social.component.css
+++ b/src/app/footer/footer-social/footer-social.component.css
@@ -1,4 +1,9 @@
 div{
   display: flex;
   flex-direction: column;
+  text-align: center;
+}
+a{
+  font-size: 2rem;
+  color: var(--background-color);
 }
