--- a/src/app/footer/footer-social/footer-social.component.html
+++ b/src/app/footer/footer-social/footer-social.component.html
@@ -1,6 +1,6 @@
 <div>
-  <a href="#"><i></i></a>
-  <a href="#"><i></i></a>
-  <a href="#"><i></i></a>
-  <a href="#"><i></i></a>
+  <a href="#"><fa-icon [icon]="faFacebook"></fa-icon></a>
+  <a href="#"><fa-icon [icon]="faInstagram"></fa-icon></a>
+  <a href="#"><fa-icon [icon]="faYoutube"></fa-icon></a>
+  <a href="#"><fa-icon [icon]="faWhatsapp"></fa-icon></a>
 </div>
