Improved navbar styles

--- a/src/app/footer/footer-navbar/footer-navbar.component.css
+++ b/src/app/footer/footer-navbar/footer-navbar.component.css
@@ -1,4 +1,13 @@
 nav{
   display: flex;
   flex-direction: column;
+  font-weight: bold;
+}
+span{
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--background-color);
+}
+.active{
+  color: var(--title-color);
 }
