--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -10,6 +10,7 @@ nav{
 section{
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 3rem;
 }
 span{
@@ -24,5 +25,6 @@ input{
 }
 .active{
   color: var(--main-color);
+  font-weight: bold;
 }
 
