Added geographic block for about and html for about-data

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,5 @@
-<p>about works!</p>
+<h1 class="general__title">Nosotros</h1>
+<section>
+  <app-about-geography />
+  <app-about-data />
+</section>
