--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-nav{
+nav {
   display: flex;
   flex-direction: row;
   gap: 2rem;
@@ -6,26 +6,30 @@ nav{
   padding: 2rem;
   align-items: center;
   background-color: var(--background-color);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+
 }
-section{
+
+section {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 3rem;
 }
-span{
+
+span {
   transition: all 300ms ease-in-out;
   font-size: 2rem;
 }
-input{
+
+input {
   border: none;
   padding: 0.7rem;
   font-size: 2rem;
   background-color: var(--detail-color);
   border-radius: 2rem;
 }
-.active{
-  color: var(--main-color);
-  font-weight: bold;
-}
 
+.active {
+  color: var(--main-color);
+}
