Added CCE section

--- a/src/app/cce/cce.component.html
+++ b/src/app/cce/cce.component.html
@@ -1,1 +1,8 @@
 <h1 class="general__title">Comité Comunal de Emergencias (CCE)</h1>
+<p class="general__text">Se articulan a partir de la participación de representantes de la sociedad civil, representantes de organizaciones
+  comunales, representantes institucionales en la comunidad, organizaciones no gubernamentales y empresa privada. Su
+  ámbito de acción es el nivel de distrito, poblado o barrio, su organización, seguimiento y asesoría, será
+  responsabilidad de los Comités Municipal de Emergencia, con la supervisión del Oficial de Enlace y la capacitación del
+  área de Formación y Capacitación.</p>
+<h1 class="general__title">Ubicación</h1>
+<app-cce-map />
