--- a/src/app/hostel/hostel.component.html
+++ b/src/app/hostel/hostel.component.html
@@ -1,1 +1,9 @@
 <h1 class="general__title">Albergues</h1>
+<p class="general__text">Los albergues son espacios destinados a proporcionar alojamiento provisional a personas que se
+  encuentran en situaciones de crisis o desastres naturales.
+
+  Las personas deslazadas debido a los efectos de los desastres y otras crisis, sueles encontrarse en una situación de
+  precariedad repentida debido a l aperdida de bienes y a la privación de servicios esenciales por un periodo
+  indeterminado, dependiendo del tipo de emergencia a la que se enfrenten.</p>
+<h1 class="general__title">Ubicación</h1>
+<app-hostel-map />
