--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -20,6 +20,10 @@ section {
 span {
   transition: all 300ms ease-in-out;
   font-size: 2rem;
+  cursor: pointer;
+}
+span:hover{
+  color: var(--main-color);
 }
 
 input {
