--- a/src/app/cce/cce-map/cce-map.component.css
+++ b/src/app/cce/cce-map/cce-map.component.css
@@ -18,6 +18,13 @@ span{
   border-radius: 0.5rem;
   color: var(--background-color);
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  opacity: 0.8;
+  transition: all 300ms ease-in-out;
+  cursor: pointer;
+}
+span:hover{
+
+  opacity: 1;
 }
 div{
   height: 60vh;
