--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
 <app-home-header> </app-home-header>
 <app-home-info></app-home-info>
+<app-home-actions></app-home-actions>
 <app-home-aboutme></app-home-aboutme>
