--- a/src/app/home/home-actions/home-actions.component.html
+++ b/src/app/home/home-actions/home-actions.component.html
@@ -1,1 +1,10 @@
-<p>home-actions works!</p>
+<Section>
+    <div class="title__actions">
+        <h2>Que hacer en caso de...</h2>
+    </div>
+    <div class="img">
+        <img src="../../../assets/img/home/ComoNosPreparamos.webp" alt="">
+        <img src="../../../assets/img/home/ComoActuar.webp" alt="">
+        <img src="../../../assets/img/home/ComoActuarInundacion.webp" alt="">
+    </div>
+</Section>
