--- a/src/app/home/home-faq/home-faq.component.html
+++ b/src/app/home/home-faq/home-faq.component.html
@@ -1,1 +1,50 @@
-<p>home-faq works!</p>
+<section>
+    <header>
+        <div class="title">
+            <h2>Preguntas frecuentes</h2>
+        </div>
+        <div class="text">
+            Los usuarios encontrarán en este segmento un compendio de preguntas y respuestas de los cuestionamientos más frecuentes que son consultados. Lo que se pretende es fomentar la educación y la formación de ciudadanos responsables.
+        </div>
+    </header>
+    <article>
+        <div class="close">
+            <fa-icon [icon]="faPlus"/>
+            <p>Esta es una pregunta frecuente!!!!</p>
+        </div>
+        <div class="open">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
+            </p>
+        </div>
+    </article>
+    <article>
+        <div class="close">
+            <fa-icon [icon]="faPlus"/>
+            <p>Esta es una pregunta frecuente!!!!</p>
+        </div>
+        <div class="open">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
+            </p>
+        </div>
+    </article>
+    <article>
+        <div class="close">
+            <fa-icon [icon]="faPlus"/>
+            <p>Esta es una pregunta frecuente!!!!</p>
+        </div>
+        <div class="open">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
+            </p>
+        </div>
+    </article>
+    
+</section>
