--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,3 +2,4 @@
 <app-home-info></app-home-info>
 <app-home-actions></app-home-actions>
 <app-home-aboutme></app-home-aboutme>
+<app-home-faq></app-home-faq>
