--- a/src/app/home/home-faq/home-faq.component.html
+++ b/src/app/home/home-faq/home-faq.component.html
@@ -7,12 +7,12 @@
             Los usuarios encontrarán en este segmento un compendio de preguntas y respuestas de los cuestionamientos más frecuentes que son consultados. Lo que se pretende es fomentar la educación y la formación de ciudadanos responsables.
         </div>
     </header>
-    <article>
+    <article id="faq1" class="question" (click)="toggleItem('faq1')">
         <div class="close">
-            <fa-icon [icon]="faPlus"/>
+            <fa-icon [icon]="faIcon1"></fa-icon>
             <p>Esta es una pregunta frecuente!!!!</p>
         </div>
-        <div class="open">
+        <div class="answer open">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
@@ -20,12 +20,13 @@
             </p>
         </div>
     </article>
-    <article>
+    <!-- Repite el mismo formato para cada pregunta frecuente -->
+    <article id="faq2" class="question" (click)="toggleItem('faq2')">
         <div class="close">
-            <fa-icon [icon]="faPlus"/>
-            <p>Esta es una pregunta frecuente!!!!</p>
+            <fa-icon [icon]="faIcon2"></fa-icon>
+            <p>Otra pregunta frecuente!!!!</p>
         </div>
-        <div class="open">
+        <div class="answer open">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
@@ -33,12 +34,12 @@
             </p>
         </div>
     </article>
-    <article>
+    <article id="faq2" class="question" (click)="toggleItem('faq2')">
         <div class="close">
-            <fa-icon [icon]="faPlus"/>
-            <p>Esta es una pregunta frecuente!!!!</p>
+            <fa-icon [icon]="faIcon2"></fa-icon>
+            <p>Otra pregunta frecuente!!!!</p>
         </div>
-        <div class="open">
+        <div class="answer open">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
@@ -46,5 +47,30 @@
             </p>
         </div>
     </article>
-    
+    <article id="faq2" class="question" (click)="toggleItem('faq2')">
+        <div class="close">
+            <fa-icon [icon]="faIcon2"></fa-icon>
+            <p>Otra pregunta frecuente!!!!</p>
+        </div>
+        <div class="answer open">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
+            </p>
+        </div>
+    </article>
+    <article id="faq2" class="question" (click)="toggleItem('faq2')">
+        <div class="close">
+            <fa-icon [icon]="faIcon2"></fa-icon>
+            <p>Otra pregunta frecuente!!!!</p>
+        </div>
+        <div class="answer open">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, temporibus? Voluptates dolor id incidunt magnam odit ratione architecto recusandae harum ad quo debitis quidem eveniet, aperiam iure culpa sequi quisquam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quisquam repudiandae numquam rerum harum ipsam minus itaque tempore, minima tempora quos voluptate reiciendis quae quam fuga molestiae in! Corporis, quis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti, mollitia ducimus aliquid suscipit voluptatem iste iure, culpa veritatis eum possimus eos. Fugit earum nulla nihil dolor porro sapiente recusandae!
+            </p>
+        </div>
+    </article>
 </section>
