--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,4 @@
 <app-home-actions></app-home-actions>
 <app-home-aboutme></app-home-aboutme>
 <app-home-faq></app-home-faq>
+<app-home-schedule></app-home-schedule>
