--- a/src/app/home/home-info/home-info.component.html
+++ b/src/app/home/home-info/home-info.component.html
@@ -12,15 +12,15 @@
         <div class="__content">
             <article class="__content-info">
                 <img src="../../../assets/img/home/hands.webp" alt="">
-                <button>Instancias</button>
+                <a target="_blank" href="https://www.cne.go.cr/rectoria/instancias_coordinacion/index.aspx">Instancias</a>
             </article>
             <article class="__content-info">
                 <img src="../../../assets/img/home/politics.webp" alt="">
-                <button>Politicas</button>
+                <a target="_blank" href="https://www.cne.go.cr/#">Politicas</a>
             </article>
             <article class="__content-info">
                 <img src="../../../assets/img/home/costarica.webp" alt="">
-                <button>Plan Nacional</button>
+                <a target="_blank" href="https://www.cne.go.cr/rectoria/plan_nacional_gestion_riesgo.aspx">Plan Nacional</a>
             </article>
         </div>
     </div>
