--- a/src/app/home/home-aboutme/home-aboutme.component.css
+++ b/src/app/home/home-aboutme/home-aboutme.component.css
@@ -12,7 +12,7 @@
     justify-content: center;
     flex-wrap: wrap;
 
-    color: #ff8b18;
+    color: #939292;
     font-size: 2rem;
     padding: 0 3%;
 }
@@ -72,13 +72,13 @@
 }
 
 
-
-
-
-.__text button {
+.__text a {
     width: 12rem;
     height: 4rem;
-    padding: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     border: none;
     border-radius: 5px;
@@ -91,6 +91,6 @@
     cursor: pointer;
 }
 
-.__text button:hover {
+.__text a:hover {
     background-color: #fe952d;
 }
