--- a/src/app/home/home-aboutme/home-aboutme.component.html
+++ b/src/app/home/home-aboutme/home-aboutme.component.html
@@ -14,7 +14,7 @@
                 de la región; así como del cacique Osa, que, según el relato de Andrés de Cereceda del viaje efectuado por Gil 
                 González Dávila, se hallaba a ocho leguas (unos 45 kilómetros) de punta Burica....
             </p>
-            <button>Leer más</button>
+            <a target="_blank" href="https://munidegolfito.go.cr/index.php/mi-canton/historia">Leer más</a>
         </div>
 
     </div>
