--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-home-header> </app-home-header>
+<app-home-new></app-home-new>
 <app-home-info></app-home-info>
 <app-home-actions></app-home-actions>
 <app-home-aboutme></app-home-aboutme>
