Added hostel table and change in navbar

--- a/src/app/hostel/hostel.component.html
+++ b/src/app/hostel/hostel.component.html
@@ -1,9 +1,15 @@
 <h1 class="general__title">Albergues</h1>
 <p class="general__text">Los albergues son espacios destinados a proporcionar alojamiento provisional a personas que se
   encuentran en situaciones de crisis o desastres naturales.
-
+  <br>
   Las personas deslazadas debido a los efectos de los desastres y otras crisis, sueles encontrarse en una situación de
   precariedad repentida debido a l aperdida de bienes y a la privación de servicios esenciales por un periodo
-  indeterminado, dependiendo del tipo de emergencia a la que se enfrenten.</p>
+  indeterminado, dependiendo del tipo de emergencia a la que se enfrenten.
+</p>
 <h1 class="general__title">Ubicación</h1>
 <app-hostel-map />
+<h1 class="general__title">Lista</h1>
+<p class="general__text">El CME debe elaborar un inventario de posibles albergues temporales. Este debe contemplar la
+  revisión física y sanitaria, para identificar las condiciones, idoneidad y definir los términos para su utilización
+  (convenios de cooperación, inventario de recursos internos, espacio a utiizar, etc.).</p>
+<app-hostel-extra />
