--- a/src/app/footer/footer-navbar/footer-navbar.component.css
+++ b/src/app/footer/footer-navbar/footer-navbar.component.css
@@ -7,6 +7,11 @@ nav{
 span{
   font-size: 2rem;
   font-weight: bold;
+  transition: all 300ms ease-in-out;
+  cursor: pointer;
+}
+span:hover{
+  color: var(--title-color);
 }
 .active{
   color: var(--title-color);
