Added carousel for hostel

--- a/src/app/hostel/hostel-map/hostel-map.component.html
+++ b/src/app/hostel/hostel-map/hostel-map.component.html
@@ -1,6 +1,15 @@
 <nav>
-  @for (place of places; track place){
+  @if (carousel == 0){
+    <button disabled (click) = "navigateCarousel(-1)" value="<">{{"<"}}</button>
+  }@else{
+    <button (click) = "navigateCarousel(-1)" value="<">{{"<"}}</button>
+  }
+  @for (place of places.slice(carousel, carousel + 4); track place){
   <span (click) = "setCurrentPlace(place.id)" >{{place.name}}</span>
   }
-</nav>
+  @if (carousel == places.length - 4){
+    <button disabled (click) = "navigateCarousel(1)" value="<">{{">"}}</button>
+  }@else{
+    <button (click) = "navigateCarousel(1)" value="<">{{">"}}</button>
+  }</nav>
 <div [innerHTML]=places[currentPlace].ubication></div>
