added cce carousel and css for buttons

--- a/src/app/cce/cce-map/cce-map.component.css
+++ b/src/app/cce/cce-map/cce-map.component.css
@@ -30,3 +30,12 @@ div{
   position: relative;
 }
 
+button{
+  font-size: 2rem;
+  border: none;
+  background-color: var(--background-color);
+  cursor: pointer;
+}
+.disabled{
+  opacity: 0;
+}
