--- a/src/app/hostel/hostel-map/hostel-map.component.html
+++ b/src/app/hostel/hostel-map/hostel-map.component.html
@@ -1,6 +1,6 @@
 <nav>
   @if (carousel == 0){
-    <button disabled (click) = "navigateCarousel(-1)" value="<">{{"<"}}</button>
+    <button class="disabled" disabled (click) = "navigateCarousel(-1)" value="<">{{"<"}}</button>
   }@else{
     <button (click) = "navigateCarousel(-1)" value="<">{{"<"}}</button>
   }
@@ -8,8 +8,9 @@
   <span (click) = "setCurrentPlace(place.id)" >{{place.name}}</span>
   }
   @if (carousel == places.length - 4){
-    <button disabled (click) = "navigateCarousel(1)" value="<">{{">"}}</button>
+    <button class="disabled" disabled (click) = "navigateCarousel(1)" value="<">{{">"}}</button>
   }@else{
     <button (click) = "navigateCarousel(1)" value="<">{{">"}}</button>
-  }</nav>
+  }
+</nav>
 <div [innerHTML]=places[currentPlace].ubication></div>
