--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <div>
+  @if (open){
+    <button (click) = "toggleOpen()"><fa-icon [icon]="faBars"></fa-icon></button>
+  }@else{
+    <button (click) = "toggleOpen()"><fa-icon [icon]="faX"></fa-icon></button>
+  }
+  <app-menu-mobile />
   <app-navbar />
   <main>
     <router-outlet />
