--- a/src/app/menu-mobile/menu-mobile.component.html
+++ b/src/app/menu-mobile/menu-mobile.component.html
@@ -1,9 +1,11 @@
 <main>
   <div>
-    <img src="../../assets/img/escudo1.gif" alt="Logo de la municipalidad de Golfito">
+    <section>
+      <img src="../../assets/img/escudo1.gif" alt="Logo de la municipalidad de Golfito">
+    </section>
+    <input type="text" placeholder="Buscar" name="search">
   </div>
   <nav>
-    <input type="text" placeholder="Buscar" name="search">
     <span routerLink='/dashboard' routerLinkActive='active'>Inicio</span>
     <span routerLink='/cce' routerLinkActive='active'>Comité Comunal</span>
     <span routerLink='/albergues' routerLinkActive='active'>Albergues</span>
