--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,7 @@ button{
   letter-spacing: 3rem;
   text-align: justify;
   transition: all 300ms ease-in-out;
-  background-color: var(--main-color);
+  background-color: var(--title-color);
   color: var(--background-color);
   font-size: 2rem;
   display: none;
@@ -21,12 +21,23 @@ button{
 app-menu-mobile{
   display: none;
 }
+app-menu-mobile{
+  z-index: 1;
+  position: fixed;
+
+}
+.hidden{
+  opacity: 0;
+}
 /*Responsive*/
 @media (max-width: 1070px){
   app-navbar{
     display: none;
   }
   button{
+    display: block;
+  }
+  app-menu-mobile{
     display: block;
   }
 }
