--- a/src/app/menu-mobile/menu-mobile.component.css
+++ b/src/app/menu-mobile/menu-mobile.component.css
@@ -6,6 +6,7 @@ main{
   flex-direction: column;
   padding: 2rem;
   justify-content: space-around;
+  box-shadow: 10px 0 10px 5px rgba(0, 0, 0, 0.3);
 }
 div{
   display: flex;
