Added footer responsive for 1070 px

--- a/src/app/footer/footer-social/footer-social.component.css
+++ b/src/app/footer/footer-social/footer-social.component.css
@@ -6,3 +6,11 @@ div{
 a{
   font-size: 4rem;
 }
+@media (max-width: 1070px){
+  div{
+    justify-content: center;
+    gap: 5rem;
+    flex-direction: row;
+    margin-bottom: 4rem;
+  }
+}
