--- a/src/app/home/home-aboutme/home-aboutme.component.html
+++ b/src/app/home/home-aboutme/home-aboutme.component.html
@@ -1,5 +1,5 @@
 <article class="main__content__about">
-    <div class="__title__about">
+    <div class="general__title">
         <h2>Datos Geograficos</h2>
     </div>
     <div class="__body__about">
@@ -8,10 +8,10 @@
         </div>
         <div class="__text">
             <p>
-                En la época precolombina, el territorio que actualmente corresponde al cantón de Golfito, estuvo habitado por 
-                indígenas del llamado grupo de los bruncas. En los inicios de la conquista, el territorio fue dominio de Giriara, 
-                cacique de Turucaca, cacicazgo que se localizaba a unos 55 kilómetros del litoral de golfo Dulce, hacia el interior 
-                de la región; así como del cacique Osa, que, según el relato de Andrés de Cereceda del viaje efectuado por Gil 
+                En la época precolombina, el territorio que actualmente corresponde al cantón de Golfito, estuvo habitado por
+                indígenas del llamado grupo de los bruncas. En los inicios de la conquista, el territorio fue dominio de Giriara,
+                cacique de Turucaca, cacicazgo que se localizaba a unos 55 kilómetros del litoral de golfo Dulce, hacia el interior
+                de la región; así como del cacique Osa, que, según el relato de Andrés de Cereceda del viaje efectuado por Gil
                 González Dávila, se hallaba a ocho leguas (unos 45 kilómetros) de punta Burica....
             </p>
             <a target="_blank" href="https://munidegolfito.go.cr/index.php/mi-canton/historia">Leer más</a>
