--- a/src/app/home/home-actions/home-actions.component.html
+++ b/src/app/home/home-actions/home-actions.component.html
@@ -1,5 +1,5 @@
 <Section>
-    <div class="title__actions">
+    <div class="general__title">
         <h2>Que hacer en caso de...</h2>
     </div>
     <div class="img">
