--- a/src/app/home/home-faq/home-faq.component.html
+++ b/src/app/home/home-faq/home-faq.component.html
@@ -1,11 +1,11 @@
 <section>
     <header>
-        <div class="title">
+        <div class="general__title">
             <h2>Preguntas frecuentes</h2>
         </div>
-        <div class="text">
+        <p class="text">
             Los usuarios encontrarán en este segmento un compendio de preguntas y respuestas de los cuestionamientos más frecuentes que son consultados. Lo que se pretende es fomentar la educación y la formación de ciudadanos responsables.
-        </div>
+        </p>
     </header>
     <article id="faq1" class="question" (click)="toggleItem('faq1')">
         <div class="close">
@@ -61,5 +61,5 @@
         </div>
     </article>
 
-    
+
 </section>
