--- a/src/app/home/home-info/home-info.component.html
+++ b/src/app/home/home-info/home-info.component.html
@@ -1,12 +1,12 @@
 <article class="main__content">
-    <div class="__title">
+    <div class="general__title">
         <h2>Sistema Nacionales de Gestion del Riesgo</h2>
     </div>
     <div class="__body">
         <div class="__text">
             <p>
                 El SNGR permite organizar y articular de forma integral, armónica y coordinada las relaciones, los programas y recursos de las instituciones del estado,
-                el Sector Privado y la Sociedad Civil organizada. 
+                el Sector Privado y la Sociedad Civil organizada.
             </p>
         </div>
         <div class="__content">
