--- a/src/app/home/home-schedule/home-schedule.component.html
+++ b/src/app/home/home-schedule/home-schedule.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="__title__about">
+    <div class="general__title">
         <h2>Horarios</h2>
     </div>
     <div class="__body__about">
