--- a/src/app/cce/cce-map/cce-map.component.css
+++ b/src/app/cce/cce-map/cce-map.component.css
@@ -8,6 +8,10 @@ nav{
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 3rem;
 }
+section{
+  width: 100%;
+  overflow-x: auto;
+}
 span{
   font-size: 2rem;
   flex: 0.1;
@@ -40,7 +44,6 @@ button{
   opacity: 0;
 }
 table {
-  width: 100%;
   font-size: 1.8rem;
   border-collapse: collapse;
   border: 2px solid #C7C7C7; /* Borde de la tabla */
