--- a/src/app/cce/cce-map/cce-map.component.html
+++ b/src/app/cce/cce-map/cce-map.component.html
@@ -14,6 +14,7 @@
   }
 </nav>
 <div [innerHTML]=places[currentPlace].ubication></div>
+<section>
 <table>
   <thead>
     <tr>
@@ -42,3 +43,4 @@
     <td>{{person.email}}</td>  </tr>
   }
 </table>
+</section>
